fix(sdds-message): added padding to content to align with design

--- a/tegel/src/components/message/sdds-message.scss
+++ b/tegel/src/components/message/sdds-message.scss
@@ -65,6 +65,7 @@
     flex-direction: column;
     gap: 4px;
     color: var(--sdds-message-color);
+    padding: 2px 0;
 
     .message-header {
       font: var(--sdds-headline-07);
